[metadata]
name = WIMS
version = 0.0.1-dev
description = Database to store location of stuff.
long_description = file: README.md
author = Hendrik Klug
author_email = hendrik.klug@gmail.com
url = https://github.com/Jimmy2027/WhereIsMyStuff
keywords =
    mongodb

provides = wims

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
package_dir =
    = src
install_requires =
    requests
    pygments
    pymongo
    pyocclient
    modun @ git+https://github.com/Jimmy2027/MODUN.git

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wims = wims.__main__:main

[options.extras_require]
testing =
    pytest

